--- a/assets/views/pages/config_lame_large.html
+++ b/assets/views/pages/config_lame_large.html
@@ -1,5 +1,5 @@
 <div class="columns p-centered my-2 py-2">
-    <div class="column col-10 col-md-11 p-centered col-sm-12">
+    <div class="column col-10 col-lg-11 p-centered col-sm-12">
         <div class="columns">
             <div class="column col-6 col-sm-12">
                 <img class="w-75 d-block m-auto pt-2 mt-2" id="" src="assets/images/cloture-aluminium-lame-large.png"
@@ -73,13 +73,13 @@
                     <div id="dimension" class="col-12">
                         <label class="form-label text-left">Dimension</label>
                         <div class="columns justify-start">
-                            <div class="form-group form-inline column col-6 col-md-12 text-left">
+                            <div class="form-group form-inline column col-6 col-lg-12 text-left">
                                 <label class="form-label" for="longueur">Longueur en mètre</label>
                                 <input class="form-input longueur" type="text" id="longueur"
                                        placeholder="Longueur de la cloture"
                                        value="1" min="1">
                             </div>
-                            <div class="form-group form-inline column col-6 col-md-12 text-left">
+                            <div class="form-group form-inline column col-6 col-lg-12 text-left">
                                 <label class="form-label" for="hauteur">Hauteur en mètre</label>
                                 <div class="inputselect">
                                     <select id="hauteur" class="form-select hauteur">
@@ -284,7 +284,7 @@
 </div>
 
 
-<div class="col-10 col-md-11 col-sm-12 col-mx-auto my-4 py-4">
+<div class="col-10 col-lg-11 col-sm-12 col-mx-auto my-4 py-4">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper leo venenatis diam volutpat tempus.
     Nullam feugiat, leo at sagittis auctor, leo est dapibus risus, vitae ultricies sapien mauris ut turpis.
     Vestibulum
