--- a/assets/views/parts/navbar.html
+++ b/assets/views/parts/navbar.html
@@ -1,7 +1,7 @@
-<header class="navbar mb-1 col-8 col-md-12 col-sm-12 m-auto mygreybox">
+<header class="navbar mb-1 col-8 col-lg-12 col-sm-12 m-auto mygreybox">
 
     <div class="columns col-12">
-        <section class="column col-3 col-md-6 col-sm-12">
+        <section class="column col-3 col-lg-5 col-sm-12">
             <a href="#" class="">
                 <svg width="100%" height="100%" viewBox="0 0 934 317"
                      style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
@@ -134,7 +134,7 @@
                 </svg>
             </a>
         </section>
-        <section class="mymenu popover popover-bottom col-sm-5 m-auto text-center col-md-3 ">
+        <section class="mymenu popover popover-bottom col-sm-5 m-auto text-center col-lg-3 ">
             <button class="btn btn-lg btn-link mobile-menu">
                 <svg class="feather">
                     <use xlink:href="assets/images/feather-sprite.svg#menu"></use>
@@ -152,7 +152,7 @@
             </div>
 
         </section>
-        <section class="col-1 col-md-3 col-sm-5 text-right">
+        <section class="col-1 col-lg-3 col-sm-5 text-right">
             <div class="popover popover-bottom mb-2 mt-1">
                 <button class="btn btn-action btn-link c-hand mr-2" data-modaltarget="contact" aria-label="Contactez nous" id="contactMenu">
                     <svg class="feather" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;fill:#000000;" xml:space="preserve">
